@startuml
'https://plantuml.com/class-diagram



class WordFinderSort{
    + List<String> ChangeWord(List<String> lines)
    List<String> editedList
}

class WordFinderBase{
      List<String> words
   + {static} void main()
   - {static} List<String> convertFile()
}

class WordFinderExport{
   + {static} void exportList(List<String> Names)
   + {static} String Input()
}
WordFinderBase <|-- WordFinderSort
WordFinderBase <|-- WordFinderExport

@enduml